# qrcraft

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html
src/qrcraft/: __init__.py  cli.py  generator.py
